--- a/src/main/resources/fxml/Address.fxml
+++ b/src/main/resources/fxml/Address.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
+<?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -12,71 +12,66 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0"
-            xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="win.ots.hellefx.controller.AddressController"
-            stylesheets="@../css/main.css">
-   <children>
-      <SplitPane dividerPositions="0.29797979797979796" layoutX="143.0" layoutY="98.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-        <items>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <TableView layoutX="-26.0" layoutY="99.0" prefHeight="398.0" prefWidth="174.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                    <columns>
-                      <TableColumn prefWidth="75.0" text="Name" />
-                      <TableColumn prefWidth="75.0" text="Phone" />
-                    </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
-               </children>
-            </AnchorPane>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-               <children>
-                  <GridPane layoutX="98.0" layoutY="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
-                     <children>
-                        <Label GridPane.rowIndex="0" text="Name:" />
-                        <Label GridPane.rowIndex="1" text="Phone:" />
-                        <Label GridPane.rowIndex="2" text="Group:" />
-                        <Label GridPane.rowIndex="3" text="Birthday:" />
-                        <Label GridPane.rowIndex="4" text="Job:" />
-                        <Label GridPane.rowIndex="5" text="Address:" />
-                        <Label GridPane.rowIndex="6" text="Notes:" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="name" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="phone" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="2" fx:id="group" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" fx:id="birthDay" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" fx:id="job" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" fx:id="address" />
-                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="6" fx:id="note" />
-                     </children>
-                  </GridPane>
-                  <HBox layoutX="246.0" layoutY="338.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
-                     <children>
-                        <JFXButton mnemonicParsing="false" text="Add" onAction="#addHandler" />
-                        <JFXButton mnemonicParsing="false" text="Update" onAction="#updateHandler" />
-                        <JFXButton mnemonicParsing="false" text="Delete" onAction="#deleteHandler" />
-                     </children>
-                  </HBox>
-               </children>
-            </AnchorPane>
-        </items>
-      </SplitPane>
-   </children>
+<AnchorPane prefHeight="306.0" prefWidth="472.0" stylesheets="@../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="win.ots.hellefx.controller.AddressController">
+    <children>
+        <SplitPane dividerPositions="0.45" layoutX="143.0" layoutY="98.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+            <items>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
+                    <children>
+                        <TableView fx:id="tableView" layoutX="-26.0" layoutY="99.0" prefHeight="304.0" prefWidth="197.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                            <columns>
+                                <TableColumn fx:id="columnName" prefWidth="75.0" text="Name" />
+                                <TableColumn fx:id="columnPhone" prefWidth="75.0" text="Phone" />
+                            </columns>
+                            <columnResizePolicy>
+                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                            </columnResizePolicy>
+                        </TableView>
+                    </children>
+                </AnchorPane>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="357.0" prefWidth="416.0">
+                    <children>
+                        <GridPane layoutX="98.0" layoutY="60.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+                            <columnConstraints>
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            </columnConstraints>
+                            <rowConstraints>
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            </rowConstraints>
+                            <children>
+                                <Label text="Name:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                                <Label text="Phone:" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                                <Label text="Group:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                                <Label text="Birthday:" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                                <Label text="Job:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                                <Label text="Address:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                                <Label text="Notes:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+                                <TextField fx:id="name" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                                <TextField fx:id="phone" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                <TextField fx:id="group" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                <TextField fx:id="birthDay" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                                <TextField fx:id="job" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                                <TextField fx:id="address" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                <TextField fx:id="note" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                            </children>
+                        </GridPane>
+                        <HBox layoutX="246.0" layoutY="338.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.rightAnchor="20.0">
+                            <children>
+                                <JFXButton mnemonicParsing="false" onAction="#addHandler" text="Add" />
+                                <JFXButton mnemonicParsing="false" onAction="#updateHandler" text="Update" />
+                                <JFXButton mnemonicParsing="false" onAction="#deleteHandler" text="Delete" />
+                            </children>
+                        </HBox>
+                    </children>
+                </AnchorPane>
+            </items>
+        </SplitPane>
+    </children>
 </AnchorPane>
